--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,23 +1,34 @@
-body{
-    margin: 0px;
+body {
+  min-width: 100vw;
+  min-height: 100vh;
+  margin: 0px;
+  background-color: rgb(85, 36, 131);
+  color: white;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  overflow-x: hidden;
 }
 #root {
-  width: 100vw;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: rgb(85, 36, 131);
+}
+#head-content {
+  text-align: center;
+}
+#root a {
+  color: white;
 }
 #magnet-in {
   border: none;
+  width: 700px;
+  margin: 20px;
   padding: 20px;
   font-size: large;
-  border-radius: 20px;
+  border-radius: 5px;
   background-color: rgb(46, 6, 83);
   color: white;
 }
 video {
-  width: 100%;
+  width: 80%;
 }
